sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: '(' expected but identifier found.
    if !plusPetit(i,i+1){
       ^AlgGnomeSort:15: error: illegal start of simple expression
  }while i+1<getNombreValeurs
  ^AlgGnomeSort:15: error: '(' expected but identifier found.
  }while i+1<getNombreValeurs
         ^